# model/errors.go
@@ -1,0 +1,7 @@
+package model
+
+// HTTPError error
+type HTTPError struct {
+	Code    int    `json:"code" example:"400"`
+	Message string `json:"message" example:"status bad request"`
+}
