# route/router.go
@@ -2,9 +2,13 @@ package route
 
 import (
 	"prueba-meli/api"
+	_ "prueba-meli/docs" // docs is generated by Swag CLI, you have to import it.
+	"strings"
 
-	"github.com/labstack/echo"
-	"github.com/labstack/echo/middleware"
+	echoSwagger "github.com/swaggo/echo-swagger"
+
+	"github.com/labstack/echo/v4"
+	"github.com/labstack/echo/v4/middleware"
 	"github.com/labstack/gommon/log"
 )
 
@@ -15,7 +19,14 @@ func New() *echo.Echo {
 	// Set Bundle MiddleWare
 	e.Pre(middleware.RemoveTrailingSlash())
 	e.Use(middleware.Logger())
-	e.Use(middleware.Gzip())
+	e.Use(middleware.GzipWithConfig(middleware.GzipConfig{
+		Skipper: func(c echo.Context) bool {
+			if strings.Contains(c.Request().URL.Path, "swagger") || strings.Contains(c.Request().URL.Path, "docs") {
+				return true
+			}
+			return false
+		},
+	}))
 	e.Use(middleware.CORSWithConfig(middleware.CORSConfig{
 		AllowOrigins: []string{"*"},
 		AllowHeaders: []string{echo.HeaderOrigin, echo.HeaderContentType, echo.HeaderAccept, echo.HeaderAuthorization},
@@ -24,8 +35,13 @@ func New() *echo.Echo {
 	e.Validator = NewValidator()
 
 	// Routes
-	e.GET("/", api.IndexHandler)
-	e.GET("/clima", api.ClimaHandler)
-	e.GET("/simulacion", api.SimulacionHandler)
+	v1 := e.Group("/api")
+	{
+		v1.GET("/", api.IndexHandler)
+		v1.GET("/clima", api.ClimaHandler)
+		v1.GET("/simulacion", api.SimulacionHandler)
+	}
+	e.GET("/docs/*", echoSwagger.WrapHandler)
+
 	return e
 }
